<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="bottom"
    android:layout_marginBottom="30dp"
    >
    <TextView
        android:id="@+id/resulttv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        android:textSize="25sp"
        android:textAlignment="textEnd"/>
        <TextView
            android:id="@+id/inputtv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textAlignment="textEnd"
            android:textSize="30sp"
            />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/modulus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#878787"
            android:layout_marginEnd="20dp"
            android:text="@string/modulus"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/bagi"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#878787"
            android:layout_weight="1"
            android:text="@string/bagi"
            android:layout_marginEnd="10dp"/>
 <ImageButton
     android:id="@+id/backspace"
     android:layout_width="50dp"
     android:contentDescription="@string/backspace"
     android:layout_height="50dp"
     android:layout_weight="0.5"
     android:backgroundTint="#878787"
     android:background="@drawable/ic_baseline_backspace_24"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/seven"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="#878787"
            android:text="@string/_7"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/eight"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#878787"
            android:layout_marginEnd="20dp"
            android:text="@string/_8"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/nine"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#878787"
            android:text="@string/_9"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/kali"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#878787"
            android:layout_weight="1"
            android:text="@string/kali"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/four"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#878787"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"

            android:text="@string/_4"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/five"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#878787"
            android:layout_marginEnd="20dp"
            android:text="@string/_5"
            android:layout_weight="1"
            android:textColor="@color/white"

            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/six"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#878787"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/kurang"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#878787"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/kurang"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/one"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:backgroundTint="#878787"
            android:layout_marginEnd="20dp"
            android:text="@string/_1"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/two"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#878787"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:text="@string/_2"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/three"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:backgroundTint="#878787"
            android:text="@string/_3"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/tambah"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#878787"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/tambah"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/clear"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#878787"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:text="@string/c"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/zero"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#878787"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:text="@string/_0"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/hasil"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#878787"
            android:textColor="@color/white"
            android:layout_weight="2"
            android:text="@string/hasil"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>